// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bash .java-version: Bash 1`] = `
"set -e
eval "$(fjm env)"
fjm use
if [ "$(java --version)" != 'openjdk version "17.0.2"' ]; then
  echo "Expected java version to be 'openjdk version "17.0.2"'. Got $(java --version)"
  exit 1
fi"
`;

exports[`Bash \`fjm ls\` with nothing installed: Bash 1`] = `
"set -e
eval "$(fjm env)"
if [ "$(fjm ls --tool java)" != '* system' ]; then
  echo "Expected fjm ls to be '* system'. Got $(fjm ls --tool java)"
  exit 1
fi"
`;

exports[`Bash install from .java-version: Bash 1`] = `
"set -e
eval "$(fjm env)"
fjm install --use
if [ "$(java --version)" != 'openjdk version "17.0.9"' ]; then
  echo "Expected java version to be 'openjdk version "17.0.9"'. Got $(java --version)"
  exit 1
fi"
`;

exports[`Bash install resolves a major against the fixture server: Bash 1`] = `
"set -e
eval "$(fjm env)"
fjm install 17 --use
if [ "$(java --version)" != 'openjdk version "17.0.9"' ]; then
  echo "Expected java version to be 'openjdk version "17.0.9"'. Got $(java --version)"
  exit 1
fi"
`;

exports[`Bash resolves partial semver: Bash 1`] = `
"set -e
eval "$(fjm env)"
fjm use 21
if [ "$(java --version)" != 'openjdk version "21.0.1"' ]; then
  echo "Expected java version to be 'openjdk version "21.0.1"'. Got $(java --version)"
  exit 1
fi"
`;

exports[`Bash use a fixture-seeded install: Bash 1`] = `
"set -e
eval "$(fjm env)"
fjm use 17.0.2
if [ "$(java --version)" != 'openjdk version "17.0.2"' ]; then
  echo "Expected java version to be 'openjdk version "17.0.2"'. Got $(java --version)"
  exit 1
fi"
`;

exports[`Fish .java-version: Fish 1`] = `
"fjm env | source
fjm use
set ____test____ (java --version)
if test "$____test____" != 'openjdk version "17.0.2"'
  echo "Expected java version to be 'openjdk version "17.0.2"'. Got $____test____"
  exit 1
end"
`;

exports[`Fish \`fjm ls\` with nothing installed: Fish 1`] = `
"fjm env | source
set ____test____ (fjm ls --tool java)
if test "$____test____" != '* system'
  echo "Expected fjm ls to be '* system'. Got $____test____"
  exit 1
end"
`;

exports[`Fish install from .java-version: Fish 1`] = `
"fjm env | source
fjm install --use
set ____test____ (java --version)
if test "$____test____" != 'openjdk version "17.0.9"'
  echo "Expected java version to be 'openjdk version "17.0.9"'. Got $____test____"
  exit 1
end"
`;

exports[`Fish install resolves a major against the fixture server: Fish 1`] = `
"fjm env | source
fjm install 17 --use
set ____test____ (java --version)
if test "$____test____" != 'openjdk version "17.0.9"'
  echo "Expected java version to be 'openjdk version "17.0.9"'. Got $____test____"
  exit 1
end"
`;

exports[`Fish resolves partial semver: Fish 1`] = `
"fjm env | source
fjm use 21
set ____test____ (java --version)
if test "$____test____" != 'openjdk version "21.0.1"'
  echo "Expected java version to be 'openjdk version "21.0.1"'. Got $____test____"
  exit 1
end"
`;

exports[`Fish use a fixture-seeded install: Fish 1`] = `
"fjm env | source
fjm use 17.0.2
set ____test____ (java --version)
if test "$____test____" != 'openjdk version "17.0.2"'
  echo "Expected java version to be 'openjdk version "17.0.2"'. Got $____test____"
  exit 1
end"
`;

exports[`PowerShell .java-version: PowerShell 1`] = `
"$ErrorActionPreference = "Stop"
fjm env | Out-String | Invoke-Expression
fjm use
if ( "$(java --version)" -ne 'openjdk version "17.0.2"' ) { echo "Expected java version to be 'openjdk version "17.0.2"'. Got $(java --version)"; exit 1 }"
`;

exports[`PowerShell \`fjm ls\` with nothing installed: PowerShell 1`] = `
"$ErrorActionPreference = "Stop"
fjm env | Out-String | Invoke-Expression
if ( "$(fjm ls --tool java)" -ne '* system' ) { echo "Expected fjm ls to be '* system'. Got $(fjm ls --tool java)"; exit 1 }"
`;

exports[`PowerShell install from .java-version: PowerShell 1`] = `
"$ErrorActionPreference = "Stop"
fjm env | Out-String | Invoke-Expression
fjm install --use
if ( "$(java --version)" -ne 'openjdk version "17.0.9"' ) { echo "Expected java version to be 'openjdk version "17.0.9"'. Got $(java --version)"; exit 1 }"
`;

exports[`PowerShell install resolves a major against the fixture server: PowerShell 1`] = `
"$ErrorActionPreference = "Stop"
fjm env | Out-String | Invoke-Expression
fjm install 17 --use
if ( "$(java --version)" -ne 'openjdk version "17.0.9"' ) { echo "Expected java version to be 'openjdk version "17.0.9"'. Got $(java --version)"; exit 1 }"
`;

exports[`PowerShell resolves partial semver: PowerShell 1`] = `
"$ErrorActionPreference = "Stop"
fjm env | Out-String | Invoke-Expression
fjm use 21
if ( "$(java --version)" -ne 'openjdk version "21.0.1"' ) { echo "Expected java version to be 'openjdk version "21.0.1"'. Got $(java --version)"; exit 1 }"
`;

exports[`PowerShell use a fixture-seeded install: PowerShell 1`] = `
"$ErrorActionPreference = "Stop"
fjm env | Out-String | Invoke-Expression
fjm use 17.0.2
if ( "$(java --version)" -ne 'openjdk version "17.0.2"' ) { echo "Expected java version to be 'openjdk version "17.0.2"'. Got $(java --version)"; exit 1 }"
`;

exports[`Zsh .java-version: Zsh 1`] = `
"set -e
eval "$(fjm env)"
fjm use
if [ "$(java --version)" != 'openjdk version "17.0.2"' ]; then
  echo "Expected java version to be 'openjdk version "17.0.2"'. Got $(java --version)"
  exit 1
fi"
`;

exports[`Zsh \`fjm ls\` with nothing installed: Zsh 1`] = `
"set -e
eval "$(fjm env)"
if [ "$(fjm ls --tool java)" != '* system' ]; then
  echo "Expected fjm ls to be '* system'. Got $(fjm ls --tool java)"
  exit 1
fi"
`;

exports[`Zsh install from .java-version: Zsh 1`] = `
"set -e
eval "$(fjm env)"
fjm install --use
if [ "$(java --version)" != 'openjdk version "17.0.9"' ]; then
  echo "Expected java version to be 'openjdk version "17.0.9"'. Got $(java --version)"
  exit 1
fi"
`;

exports[`Zsh install resolves a major against the fixture server: Zsh 1`] = `
"set -e
eval "$(fjm env)"
fjm install 17 --use
if [ "$(java --version)" != 'openjdk version "17.0.9"' ]; then
  echo "Expected java version to be 'openjdk version "17.0.9"'. Got $(java --version)"
  exit 1
fi"
`;

exports[`Zsh resolves partial semver: Zsh 1`] = `
"set -e
eval "$(fjm env)"
fjm use 21
if [ "$(java --version)" != 'openjdk version "21.0.1"' ]; then
  echo "Expected java version to be 'openjdk version "21.0.1"'. Got $(java --version)"
  exit 1
fi"
`;

exports[`Zsh use a fixture-seeded install: Zsh 1`] = `
"set -e
eval "$(fjm env)"
fjm use 17.0.2
if [ "$(java --version)" != 'openjdk version "17.0.2"' ]; then
  echo "Expected java version to be 'openjdk version "17.0.2"'. Got $(java --version)"
  exit 1
fi"
`;
